--- a/Client/src/login/login.component.html
+++ b/Client/src/login/login.component.html
@@ -20,7 +20,7 @@
 <md-dialog-actions>
     <div fxLayout="column" fxFlexFill>
         <div fxLayout="row-reverse">
-            <button md-button md-dialog-close class="mat-accent" (click)=login()>Login</button>
+            <button md-raised-button md-dialog-close class="mat-primary" (click)=login()>Login</button>
         </div>
     </div>
 </md-dialog-actions>
