--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -51,6 +51,7 @@ td > md-input-container > .mat-input-wrapper {
 
 .buttonTableAlignment{
     margin-left: -20px !important;
+    margin-top: -7px !important;
 }
 
 .toolbarLink{
