--- a/Client/src/styles.css
+++ b/Client/src/styles.css
@@ -57,3 +57,17 @@ td > md-input-container > .mat-input-wrapper {
 .toolbarLink{
     margin-top:5px !important;
 }
+
+.md2-datepicker-trigger{
+    padding-bottom: 0px !important;
+    padding-top: 0px !important;
+}
+
+.md2-datepicker-icon{
+    top: 3px !important;
+}
+
+.md2-datepicker-input{
+    min-width: 100px !important;
+    width: 100px !important;
+}
