Hintergrund dropdowns Farben datepicker sort teams / seasons use model objects for new items

--- a/Client/src/games/games.component.html
+++ b/Client/src/games/games.component.html
@@ -137,7 +137,7 @@
                 </md-input-container>
               </td>
               <td>
-                <button md-icon-button class="mat-accent buttonTableAlignment" (click)=addGame(newGame)>
+                <button md-icon-button class="mat-accent buttonTableAlignment" (click)=addGame()>
                   <md-icon class="icon-size-24">save</md-icon>
                 </button>
               </td>
