--- a/Client/src/main/main.component.html
+++ b/Client/src/main/main.component.html
@@ -8,7 +8,7 @@
   <div fxLayout="row" class="primary-color" style="height: 45px">
     <div><a md-button class="mat-accent toolbarLink" routerLink="/standings">Tabelle</a></div>
     <div><a md-button class="mat-accent toolbarLink" routerLink="/teamPointChart">Punkteentwicklung</a></div>
-    <div><a md-button class="mat-accent toolbarLink" routerLink="/comparison">Direktvergleich</a></div>
+    <div><a md-button class="mat-accent toolbarLink" routerLink="/teamComparison">Direktvergleich</a></div>
     <div><a md-button class="mat-accent toolbarLink" routerLink="/teamStatistics">Teamstatistik</a></div>
     <div><a md-button class="mat-accent toolbarLink" routerLink="/games">Games</a></div>
     <div><a md-button class="mat-accent toolbarLink" routerLink="/teams">Teams</a></div>
