--- a/Client/src/seasons/seasons.component.html
+++ b/Client/src/seasons/seasons.component.html
@@ -23,7 +23,7 @@
       </tbody>
     </table>
 
-    <table *ngIf=isAdmin style="width: 250px">
+    <table *ngIf="(isAdmin && seasons)" style="width: 250px">
       <thead>
         <tr>
           <th style="width: 120px">
