--- a/Client/src/teams/teams.component.html
+++ b/Client/src/teams/teams.component.html
@@ -27,7 +27,7 @@
       </tbody>
     </table>
 
-    <table *ngIf=isAdmin>
+    <table *ngIf="(isAdmin && teams)">
       <thead>
         <tr>
           <th class="input-th" style="width: 75px">
