--- a/Client/src/games/games.component.html
+++ b/Client/src/games/games.component.html
@@ -56,7 +56,7 @@
       </tbody>
     </table>
 
-    <table *ngIf=isAdmin>
+    <table *ngIf="(isAdmin && teams && seasons)">
       <thead>
         <tr>
           <th style="width: 150px">
@@ -93,7 +93,7 @@
           </td>
           <td style="width: 200px">
             <md-select [(ngModel)]="newGame.GuestTeam" style="width: 190px">
-              <md-option *ngFor="let team of teams" [value]="team">
+              <md-option *ngFor="let team of teams | teamsorderby" [value]="team">
                 {{team.Name}}
               </md-option>
             </md-select>
